[package]
name = "cult-net"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
base64 = "0.22"

# Client specific
rsa = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
crossterm = "0.28"
dirs = "5.0"

# Server specific
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
rand = "0.8"
ratatui = "0.30.0"

[[bin]]
name = "cult-net"
path = "src/main.rs"

[[bin]]
name = "cult-server"
path = "src/server/main.rs"
